fixed menu z-index

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -231,6 +231,7 @@ ul {
 .for_top_menu > ul > li > ul {
   display: none;
   position: absolute;
+  z-index: 1000;
   top: 24px;
   background: rgba(16, 22, 54, 0.1);
   padding: 4px 12px;
